# Patent_benchmark

./: .gitignore  PLANNING.md  README.md  cli.py  pyproject.toml
configs/: default_config.yaml
data/benchmark/: 5HT2A.csv  ACVR1.csv  AGTR1.csv  AKT1.csv  AR.csv  BCL2.csv  BRD4.csv  CDK9.csv  DRD2.csv  EED.csv  EZH2.csv  FXR.csv  GCGR.csv  JAK1.csv  Keap1.csv  LXRB.csv  MMP8.csv  PRMT5.csv  ROCK2.csv  WRN.csv
data/training_set/: pocketxmol_train_smiles.csv
results/baselines/stage1/: circles_coverage.csv  similarity_summary.csv
results/baselines/stage2/: reos_summary.csv  wasserstein_heatmap.csv  wasserstein_raw.csv
results/baselines/stage3/: MolCRAFT_recovery.csv  Pocket2Mol_recovery.csv  PocketFlow_recovery.csv  PocketXMol_recovery.csv  ResGen_recovery.csv  TamGen_recovery.csv  recovery_summary.csv
results/figures/: Table_SA_RA_statistics.csv
sbdd_benchmark/: __init__.py  pipeline.py
sbdd_benchmark/io/: loaders.py
sbdd_benchmark/stage1/: exploration.py
sbdd_benchmark/stage2/: filters.py  properties.py  synthesizability.py
sbdd_benchmark/stage3/: recovery.py
sbdd_benchmark/visualization/: plots.py
scripts/: unify_generated_molecules.py
